# drf-lookup

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
tests/: conftest.py  test_filterset_view.py  test_handlers.py  test_serializer_view.py
tests/app/: filters.py  views.py
